Prevent logo from going off screen on small screens

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -35,6 +35,7 @@ header p {
 
 .logo {
   width: 30rem;
+  max-width: 100%;
   vertical-align: middle;
   margin-bottom: 1rem;
 }
